add flex box for index.html

--- a/index.html
+++ b/index.html
@@ -8,25 +8,29 @@
     <link href="./assets/global.css" rel="stylesheet" />
   </head>
   <body>
-    <div class="center-box">
-      <form id="input-form">
-        <h1 class="top-header">Get Your Name In Sign Language ✌️</h1>
-        <div class="header">
-          <div class="crop">
-            <img src="assets/LOGO_APU_SIGN_HARMONY.png">
+    <div class="flex-box">
+      <section></section>
+      <main class="form-box">
+        <form id="input-form">
+          <h1 class="top-header">Get Your Name In Sign Language ✌️</h1>
+          <div class="header">
+            <div class="crop">
+              <img src="assets/LOGO_APU_SIGN_HARMONY.png">
+            </div>
+            <h1>APU Sign Harmony</h1>
           </div>
-          <h1>APU Sign Harmony</h1>
-        </div>
-        <div class="grid">
-          <label for="name">Name:</label>
-          <input type="text" id="name" />
-          <label for="tpnumber">TP Number:</label>
-          <input type="text" id="tpnumber" />
-        </div>
-        <div class="button">
-          <input type="submit" value="Submit" />
-        </div>
-      </form>
+          <div class="grid">
+            <label for="name">Name:</label>
+            <input type="text" id="name" />
+            <label for="tpnumber">TP Number:</label>
+            <input type="text" id="tpnumber" />
+          </div>
+          <div class="button">
+            <input type="submit" value="Submit" />
+          </div>
+        </form>
+      </main>
+      <section></section>
     </div>
     <div id="text"></div>
 
