--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>APU Sign Harmony</title>
     <link href="./assets/global.css" rel="stylesheet" />
+    <link href="./assets/index.css" rel="stylesheet" />
   </head>
   <body>
     <div class="flex-box">
@@ -15,15 +16,15 @@
           <h1 class="top-header">Get Your Name In Sign Language ✌️</h1>
           <div class="header">
             <div class="crop">
-              <img src="assets/LOGO_APU_SIGN_HARMONY.png">
+              <img src="assets/LOGO_APU_SIGN_HARMONY.png" />
             </div>
             <h1>APU Sign Harmony</h1>
           </div>
           <div class="grid">
             <label for="name">Name:</label>
-            <input type="text" id="name" />
+            <input type="text" id="name" required />
             <label for="tpnumber">TP Number:</label>
-            <input type="text" id="tpnumber" />
+            <input type="text" id="tpnumber" required />
           </div>
           <div class="button">
             <input type="submit" value="Submit" />
