--- a/index.html
+++ b/index.html
@@ -6,35 +6,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>APU Sign Harmony</title>
     <link href="./assets/global.css" rel="stylesheet" />
-    <link href="./assets/index.css" rel="stylesheet" />
   </head>
   <body>
-    <div class="flex-box">
-      <section></section>
-      <main class="form-box">
-        <form id="input-form">
-          <h1 class="top-header">Get Your Name In Sign Language ✌️</h1>
-          <div class="header">
-            <div class="crop">
-              <img src="assets/LOGO_APU_SIGN_HARMONY.png" />
+    <section id="prerequisite">
+      <div class="flex-box">
+        <section></section>
+        <div class="form-box">
+          <form id="student-input-form" method="dialog">
+            <h1 class="top-header">Get Your Name In Sign Language ✌️</h1>
+            <div class="header">
+              <div class="crop">
+                <img src="assets/LOGO_APU_SIGN_HARMONY.png" />
+              </div>
+              <h1>APU Sign Harmony</h1>
             </div>
-            <h1>APU Sign Harmony</h1>
-          </div>
-          <div class="grid">
-            <label for="name">Name:</label>
-            <input type="text" id="name" required />
-            <label for="tpnumber">TP Number:</label>
-            <input type="text" id="tpnumber" required />
-          </div>
-          <div class="button">
-            <input type="submit" value="Submit" />
-          </div>
-        </form>
-      </main>
-      <section></section>
-    </div>
-    <div id="text"></div>
+            <div class="grid">
+              <label for="name">Name:</label>
+              <input type="text" id="name" required />
+              <label for="tpnumber">TP Number:</label>
+              <input type="text" id="tpnumber" required />
+            </div>
+            <div class="button">
+              <input type="submit" value="Submit" />
+            </div>
+          </form>
+        </div>
+        <section></section>
+      </div>
+    </section>
 
-    <script src="js/index.js"></script>
+    <main id="main" hidden>
+      <div class="flex-box">
+        <div class="crop">
+          <img src="assets/LOGO_APU_SIGN_HARMONY.png" />
+        </div>
+        <div class="form-box">
+          <form id="sign-language-input-form">
+            <label for="alphabet">Enter a Sentence:</label>
+            <textarea id="alphabet" rows="5" cols="50" required></textarea>
+            <div class="button">
+              <input type="submit" value="Submit" />
+            </div>
+          </form>
+        </div>
+        <div id="sign-language-img"></div>
+      </div>
+    </main>
+
+    <script src="index.js"></script>
   </body>
 </html>
