add a-z alpahbets image and a feature - a new feature that receive the input, process the character of input, then show the alphabet image based on input.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         </div>
         <div class="form-box">
           <form id="sign-language-input-form">
+            <p>The sentence will be split into characters and shown with sign langauge image will be display at below. <strong>This form only support A to Z alphabets sign language.</strong></p>
             <label for="alphabet">Enter a Sentence:</label>
             <textarea id="alphabet" rows="5" cols="50" required></textarea>
             <div class="button">
