--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>APU Sign Harmony</title>
     <link href="./assets/global.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.41.1/dist/umd/supabase.min.js"></script>
+    <script src="./config.js"></script>
   </head>
   <body>
     <section id="prerequisite">
