change the project from vanilla js to vite vanilla js

--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>APU Sign Harmony</title>
-    <link href="./assets/global.css" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.41.1/dist/umd/supabase.min.js"></script>
-    <script src="./config.js"></script>
+    <link href="./assets/style.css" rel="stylesheet" />
+    <script type="module" src="index.js"></script>
   </head>
   <body>
     <section id="prerequisite">
@@ -18,7 +17,7 @@
             <h1 class="top-header">Get Your Name In Sign Language ✌️</h1>
             <div class="header">
               <div class="crop">
-                <img src="assets/LOGO_APU_SIGN_HARMONY.png" />
+                <img src="./assets/LOGO_APU_SIGN_HARMONY.png" />
               </div>
               <h1>APU Sign Harmony</h1>
             </div>
@@ -40,7 +39,7 @@
     <main id="main" hidden>
       <div class="flex-box">
         <div class="crop">
-          <img src="assets/LOGO_APU_SIGN_HARMONY.png" />
+          <img src="./assets/LOGO_APU_SIGN_HARMONY.png" />
         </div>
         <div class="form-box">
           <form id="sign-language-input-form">
@@ -56,6 +55,5 @@
       </div>
     </main>
 
-    <script src="index.js"></script>
   </body>
 </html>
