--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>APU Sign Harmony</title>
     <link href="./assets/style.css" rel="stylesheet" />
+    <link rel="icon" href="./assets/LOGO_APU_SIGN_HARMONY.png" />
     <script type="module" src="index.js"></script>
   </head>
   <body>
     <section id="prerequisite">
       <div class="flex-box">
-        <section></section>
+        <section>
+
+        </section>
         <div class="form-box">
           <form id="student-input-form" method="dialog">
             <h1 class="top-header">Get Your Name In Sign Language ✌️</h1>
