--- a/index.html
+++ b/index.html
@@ -13,8 +13,17 @@
     <section id="prerequisite">
       <div class="flex-box">
         <section>
-
+          <!-- ads with image, title mentioning sponser, with nice design -->
+          <div class="ads">
+            <h1>Our Sponser: <div id="sponser">DM Solution</div></h1>
+            <img src="./assets/ads-landscape.png" />
+          </div>
+          <div class="ads-2">
+            <h1>Our Sponser DM Solution</h1>
+            <img src="./assets/ads-portrait.png" />
+          </div>
         </section>
+        <div></div>
         <div class="form-box">
           <form id="student-input-form" method="dialog">
             <h1 class="top-header">Get Your Name In Sign Language ✌️</h1>
@@ -35,7 +44,17 @@
             </div>
           </form>
         </div>
-        <section></section>
+        <div></div>
+        <section>
+          <div class="ads">
+            <h1>Our Sponser: DM Solution</h1>
+            <img src="./assets/ads-landscape.png" />
+          </div>
+          <!-- <div class="ads-2">
+            <h1>Our Sponser: DM Solution</h1>
+            <img src="./assets/ads-portrait.png" />
+          </div> -->
+        </section>
       </div>
     </section>
 
@@ -46,7 +65,13 @@
         </div>
         <div class="form-box">
           <form id="sign-language-input-form">
-            <p>The sentence will be split into characters and shown with sign langauge image will be display at below. <strong>This form only support A to Z alphabets sign language.</strong></p>
+            <p>
+              The sentence will be split into characters and shown with sign
+              langauge image will be display at below.
+              <strong
+                >This form only support A to Z alphabets sign language.</strong
+              >
+            </p>
             <label for="alphabet">Enter a Sentence:</label>
             <textarea id="alphabet" rows="5" cols="50" required></textarea>
             <div class="button">
@@ -57,6 +82,5 @@
         <div id="sign-language-img"></div>
       </div>
     </main>
-
   </body>
 </html>
