--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div></div>
         <section>
           <div class="ads">
-            <h1>Our Sponser: DM Solution</h1>
+            <h1>Our Sponser: <div id="sponser">DM Solution</div></h1>
             <img src="./assets/ads-landscape.png" />
           </div>
           <!-- <div class="ads-2">
