--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <script type="module" src="index.js"></script>
   </head>
   <body>
-    <section id="prerequisite">
-      <div class="flex-box">
-        <section></section>
-        <div class="form-box">
+    <div class="flex-box">
+      <section></section>
+      <main id="main">
+        <div class="box">
           <form id="student-input-form" method="dialog">
             <h1 class="top-header">Get Your Name In Sign Language ✌️</h1>
             <div class="header">
@@ -32,28 +32,9 @@
             </div>
           </form>
         </div>
-        <section></section>
-      </div>
-    </section>
-
-    <main id="main" hidden>
-      <div class="flex-box">
-        <div class="crop">
-          <img src="./assets/LOGO_APU_SIGN_HARMONY.png" />
-        </div>
-        <div class="form-box">
-          <form id="sign-language-input-form">
-            <p>The sentence will be split into characters and shown with sign langauge image will be display at below. <strong>This form only support A to Z alphabets sign language.</strong></p>
-            <label for="alphabet">Enter a Sentence:</label>
-            <textarea id="alphabet" rows="5" cols="50" required></textarea>
-            <div class="button">
-              <input type="submit" value="Submit" />
-            </div>
-          </form>
-        </div>
-        <div id="sign-language-img"></div>
-      </div>
-    </main>
-
+        <div id="sign-language-img" hidden></div>
+      </main>
+      <section></section>
+    </div>
   </body>
 </html>
