--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img src="./assets/ads-landscape.png" />
           </div>
           <div class="ads-2">
-            <h1>Our Sponser <div id="sponser">DM Solution</div></h1>
+            <h1>Our Sponser <br>DM Solution</h1>
             <img src="./assets/ads-portrait.png" />
           </div>
         </section>
